--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/UNapropieated/disCF#readme",
   "dependencies": {
-    "discord.js": "^12.3.1"
+    "axios": "^0.20.0",
+    "discord.js": "^12.3.1",
+    "node-fetch": "^2.6.0"
   }
 }
